# blackbox-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  config.json  doxygen.config
.github/workflows/: build.yml  cmake-manual.yml  codeql.yml
include/: application.h  clock.h  config.h  constants.h  logger.h  output.h
include/exceptions/: invalid_key_exception.h
include/packet/: byte_container.h  content.h  device_codes.h  headers.h  packet.h  packet_decoding.h  packet_ids.h  packet_types.h  readable.h  serial_data_transfer.h  writable.h  writetable.h
include/profiling/: instrumentation.h
include/serial/: serialib.h
include/testing/: clove-unit.h
src/: clock.cpp  config.cpp  logger.cpp  main.cpp
src/packet/: content.cpp  headers.cpp  packet.cpp  packet_decoding.cpp  packet_types.cpp  serial_data_transfer.cpp
src/profiling/: instrumentation.cpp
src/serial/: serialib.cpp
tests/: config_test.cpp  content_test.cpp  headers_test.cpp  packet_test.cpp  run_tests.cpp
tools/scripts/: write_ack.py
